# angstrom-santa-claus

./: Cargo.toml  README.md
.github/workflows/: foundry-test.yml
contracts/test/: Fibonacci.t.sol
lib/: Cargo.toml
lib/src/: bytes_wrapper_macro.rs  cache.rs  craft_payload.rs  fee_summary.rs  header_lens.rs  keccak.rs  lazy_header.rs  lib.rs  partial_header.rs  payload.rs  reader.rs  receipt_trie.rs  rlp.rs  trie_path.rs
lib/src/testing/: mod.rs  random.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml
