[workspace]
members = [
    "lib",
    "program",
    "script",
]
resolver = "2"

[workspace.dependencies]
alloy-sol-types = "0.8.21"
santa-lib = { path = "./lib" }
alloy-primitives = "0.8.21"
alloy-consensus = "0.11.0"
alloy-trie = "0.7.9"
alloy-rlp = "0.3.11"
hex = "0.4.3"
tracing = "0.1.41"

[patch.crates-io]
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-4.0.0" }
