[package]
version = "0.1.0"
name = "santa-program"
edition = "2021"

[dependencies]
sp1-zkvm = "4.0.1"
tiny-keccak.workspace = true
santa-lib.workspace = true
alloy-trie.workspace = true
alloy-primitives.workspace = true
alloy-consensus = { workspace = true, features = ["serde"] }
alloy-rlp.workspace = true
