[package]
version = "0.1.0"
name = "santa-script"
edition = "2021"
default-run = "santa"

[[bin]]
name = "santa"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
sp1-sdk = "4.0.1"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing.workspace = true
hex.workspace = true
alloy-sol-types.workspace = true
alloy-primitives.workspace = true
santa-lib.workspace = true
alloy-provider = "0.11.0"
alloy-rlp.workspace = true
alloy-eips.workspace = true
tokio = "1.43.0"
eyre = "0.6.12"
futures = "0.3.31"

alloy-consensus.workspace = true
alloy-trie.workspace = true

[build-dependencies]
sp1-build = "4.0.1"
