[package]
version = "0.1.0"
name = "santa-script"
edition = "2021"
default-run = "santa"

[[bin]]
name = "santa"
path = "src/bin/main.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
sp1-sdk = {version = "4.0.1", features = ["profiling"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing.workspace = true
hex.workspace = true
alloy-primitives.workspace = true
santa-lib.workspace = true
alloy-provider = {version ="0.11.0", features=["ipc"]}
alloy-rlp.workspace = true
alloy-eips.workspace = true
rand.workspace = true
tokio = "1.43.0"
eyre = "0.6.12"
futures = "0.3.31"

alloy-consensus.workspace = true
alloy-trie.workspace = true

[build-dependencies]
sp1-build = "4.0.1"
